--- a/index.html
+++ b/index.html
@@ -133,35 +133,31 @@
 <!-- Qualification Start -->
 <div class="container-fluid py-5 bg-dark" id="qualification">
     <div class="container">
-        <div class="position-relative d-flex align-items-center justify-content-center">
-            <h1 class="display-1 text-uppercase text-light" style="-webkit-text-stroke: 0px #dee2e6;">Education</h1>
-            <h1 class="position-absolute text-uppercase text-primary"></h1>
-        </div>
-        <div class="row align-items-center">
+        <div class="row justify-content-center">
             <div class="col-lg-6">
-                <h3 class="mb-4 text-light">My Education</h3>
-                <div class="border-left border-primary pt-2 pl-4 ml-2">
-                    <div class="position-relative mb-4">
-                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                <h1 class="display-4 text-uppercase text-light">Education</h1>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <ul class="list-group">
+                    <li class="list-group-item">
                         <h5 class="font-weight-bold mb-1 text-light">Ingeniería en Sistemas de Información</h5>
-                        <h6 class="font-weight-bold mb-1 text-light">Universidad Tecnológica Nacional Facultad Regional Concepción del Uruguay | <small>2018 - 2023</small></h6>
-                    </div>
-                    <div class="position-relative mb-4">
-                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <h6 class="font-weight-bold mb-1 text-light">Universidad Tecnológica Nacional Facultad Regional Concepción del Uruguay | <small class="text-muted">2018 - 2023</small></h6>
+                    </li>
+                    <li class="list-group-item">
                         <h5 class="font-weight-bold mb-1 text-light">Programación Orientada a Objetos: Java, UTN FRCU</h5>
-                        <h6 class="font-weight-bold mb-1 text-light">Universidad Tecnológica Nacional Facultad Regional Concepción del Uruguay | <small>jul 2020 - nov 2020</small></h6>
-                    </div>
-                    <div class="position-relative mb-4">
-                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <h6 class="font-weight-bold mb-1 text-light">Universidad Tecnológica Nacional Facultad Regional Concepción del Uruguay | <small class="text-muted">jul 2020 - nov 2020</small></h6>
+                    </li>
+                    <li class="list-group-item">
                         <h5 class="font-weight-bold mb-1 text-light">Universidad JavaScript - De Cero a Experto</h5>
-                        <h6 class="font-weight-bold mb-1 text-light">Udemy - Global Mentoring Ing. Ubaldo Acosta  | <small>ago 2023 - nov 2023</small></h6>
-                    </div>
-                    <div class="position-relative mb-4">
-                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <h6 class="font-weight-bold mb-1 text-light">Udemy - Global Mentoring Ing. Ubaldo Acosta  | <small class="text-muted">ago 2023 - nov 2023</small></h6>
+                    </li>
+                    <li class="list-group-item">
                         <h5 class="font-weight-bold mb-1 text-light">Ultimate Front-End Bootcamp: CSS, Bootstrap, JQ, JS, React</h5>
-                        <h6 class="font-weight-bold mb-1 text-light">Udemy - YouAccel Training  | <small>sept 2023 - nov 2023</small></h6>
-                    </div>
-                </div>
+                        <h6 class="font-weight-bold mb-1 text-light">Udemy - YouAccel Training  | <small class="text-muted">sept 2023 - nov 2023</small></h6>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -169,18 +165,18 @@
 <!-- Qualification End -->
 
 
+
 <!-- Experience Start -->
 <div class="container-fluid py-5" style="background-color: #2b2b2b;" id="experience">
-    <div class="container text-light text-justify float-md-right">
-        <div class="position-relative d-flex align-items-center justify-content-center">
-            <h1 class="display-1 text-uppercase text-light text-center">My Experience</h1>
+    <div class="container text-light text-justify">
+        <div class="text-center">
+            <h1 class="display-1 text-uppercase text-light">My Experience</h1>
         </div>
-
-        <div class="row">
-            <div class="col-lg-6">
-                <h1 class="mt-3">Aplicación web de manejo de inventarios</h1>
+        <div class="row justify-content-around">
+            <div class="col-lg-4">
+                <h2 class="mt-3">Administración de Inventario</h2>
                 <p>
-                    Aplicación para el manejo de inventarios realizada con:
+                    Aplicación de administración de inventario utilizando:
                 </p>
                 <ul>
                     <li>TypeScript</li>
@@ -189,28 +185,27 @@
                     <li>SpringBoot</li>
                     <li>MySQL</li>
                 </ul>
-                <a href="https://github.com/francomceballos/App-FullStack-manejo-de-inventarios" class="btn btn-light mr-1 text-center mt-5 me-3">Ver código en GitHub</a>
+                <a href="https://github.com/francomceballos/App-FullStack-manejo-de-inventarios" class="btn btn-outline-light mt-3 mb-5">Ver código en GitHub</a>
             </div>
-            <div class="col-lg-6">
-                <h1 class="mt-3">Página web personal</h1>
+            <div class="col-lg-4">
+                <h2 class="mt-3">Sitio Web Personal Portfolio</h2>
                 <p>
-                    Página web personal realizada con:
+                    Sitio web creado con:
                 </p>
+                <br>
                 <ul>
                     <li>HTML</li>
                     <li>Bootstrap</li>
                     <li>CSS</li>
                     <li>JavaScript</li>          
                 </ul>
-                <br><br><br>
-                <a href="https://github.com/francomceballos/freelancer-portfolio" class="btn btn-light mr-1 text-center mt-5 me-3">Ver código en GitHub</a>
+                <br>
+                <a href="https://github.com/francomceballos/freelancer-portfolio" class="btn btn-outline-light mt-3 mb-5">Ver código en GitHub</a>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <h1 class="mt-3">Aplicación web de Recursos Humanos</h1>
+            <div class="col-lg-4">
+                <h2 class="mt-3">Aplicación de Recursos Humanos</h2>
                 <p>
-                    Aplicación para la gestión de recursos humanos realizada con:
+                    Aplicación de gestión de recursos humanos utilizando:
                 </p>
                 <ul>
                     <li>TypeScript</li>
@@ -219,12 +214,13 @@
                     <li>Java</li>
                     <li>MySQL</li>
                 </ul>
-                <a href="https://github.com/francomceballos/FullStack-React" class="btn btn-light mr-1 text-center mt-5 me-3">Ver código en GitHub</a>
+                <a href="https://github.com/francomceballos/FullStack-React" class="btn btn-outline-light mt-3 mb-5">Ver código en GitHub</a>
             </div>
         </div>
     </div>
 </div>
 <!-- Experience End -->
+
 
 
 
