modified:   index.html

--- a/index.html
+++ b/index.html
@@ -135,27 +135,27 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6">
-                <h1 class="display-4 text-uppercase text-light">Education</h1>
+                <h1 class="display-1 text-uppercase text-light">Education</h1><br><br>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div>
             <div class="col-lg-8">
                 <ul class="list-group">
-                    <li class="list-group-item">
-                        <h5 class="font-weight-bold mb-1 text-light">Ingeniería en Sistemas de Información</h5>
-                        <h6 class="font-weight-bold mb-1 text-light">Universidad Tecnológica Nacional Facultad Regional Concepción del Uruguay | <small class="text-muted">2018 - 2023</small></h6>
+                    <li class="list-group-item list-group-item-dark">
+                        <h5 class="font-weight-bold mb-1 text-dark">Ingeniería en Sistemas de Información</h5><br>
+                        <h6 class="font-weight-bold mb-1 text-dark">Universidad Tecnológica Nacional Facultad Regional Concepción del Uruguay | <small class="text-muted">2018 - presente</small></h6>
                     </li>
-                    <li class="list-group-item">
-                        <h5 class="font-weight-bold mb-1 text-light">Programación Orientada a Objetos: Java, UTN FRCU</h5>
-                        <h6 class="font-weight-bold mb-1 text-light">Universidad Tecnológica Nacional Facultad Regional Concepción del Uruguay | <small class="text-muted">jul 2020 - nov 2020</small></h6>
+                    <li class="list-group-item list-group-item-dark">
+                        <h5 class="font-weight-bold mb-1 text-dark">Programación Orientada a Objetos: Java, UTN FRCU</h5><br>
+                        <h6 class="font-weight-bold mb-1 text-dark">Universidad Tecnológica Nacional Facultad Regional Concepción del Uruguay | <small class="text-muted">jul 2020 - nov 2020</small></h6>
                     </li>
-                    <li class="list-group-item">
-                        <h5 class="font-weight-bold mb-1 text-light">Universidad JavaScript - De Cero a Experto</h5>
-                        <h6 class="font-weight-bold mb-1 text-light">Udemy - Global Mentoring Ing. Ubaldo Acosta  | <small class="text-muted">ago 2023 - nov 2023</small></h6>
+                    <li class="list-group-item list-group-item-dark">
+                        <h5 class="font-weight-bold mb-1 text-dark">Universidad JavaScript - De Cero a Experto</h5><br>
+                        <h6 class="font-weight-bold mb-1 text-dark">Udemy - Global Mentoring Ing. Ubaldo Acosta  | <small class="text-muted">ago 2023 - nov 2023</small></h6>
                     </li>
-                    <li class="list-group-item">
-                        <h5 class="font-weight-bold mb-1 text-light">Ultimate Front-End Bootcamp: CSS, Bootstrap, JQ, JS, React</h5>
-                        <h6 class="font-weight-bold mb-1 text-light">Udemy - YouAccel Training  | <small class="text-muted">sept 2023 - nov 2023</small></h6>
+                    <li class="list-group-item list-group-item-dark">
+                        <h5 class="font-weight-bold mb-1 text-dark">Ultimate Front-End Bootcamp: CSS, Bootstrap, JQ, JS, React</h5><br>
+                        <h6 class="font-weight-bold mb-1 text-dark">Udemy - YouAccel Training  | <small class="text-muted">sept 2023 - nov 2023</small></h6>
                     </li>
                 </ul>
             </div>
