modified:   index.html

--- a/index.html
+++ b/index.html
@@ -71,18 +71,51 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
+                <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="Profile photo">
             </div>
             <div class="col-lg-7 text-with-bg text-lg-left">
                 <h3 class="font-weight-normal mb-3 text-light">Hello! I'm</h3>
                 <h1 class="display-3 text-uppercase mb-2 fw-bold text-light" style="-webkit-text-stroke: 0px #00ffff">Franco Manuel Ceballos</h1>
                 <h1 class="typed-text-output d-inline font-weight-lighter text-light"></h1>
-                <div class="typed-text d-none">Junior FullStack Developer, Systems Engineering Student</div>
+                <div class="typed-text d-none">
+                    Junior FullStack Developer, Systems Engineering Student
+                </div>
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                    <a href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-4 mt-5 me-3" role="button">Descargar CV <br>Español</a>
-                    <button type="button" href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-3 mt-5 me-3" role="button" disabled>Download CV<br>English - not done yet</button>
-                    <a class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 me-3" href="https://www.linkedin.com/in/francomanuelceballos/" role="button"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn Logo" style="width: 48px; height: 48px; margin-right: 5px;">LinkedIn</a>
-                    <a class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 me-3" href="https://github.com/francomceballos" role="button"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" style="width: 48px; height: 48px; margin-right: 5px;">GitHub</a>                  
+                    <a 
+                        href="/files/CV-Ceballos-Franco-2024.pdf" 
+                        class="btn btn-light mr-1 text-center ml-4 mt-5 me-3" 
+                        role="button"
+                    >
+                        Descargar CV <br>Español
+                    </a>
+                    <a 
+                        href="#" 
+                        class="btn btn-light mr-1 text-center ml-3 mt-5 me-3 disabled" 
+                        role="button" 
+                        aria-disabled="true"
+                    >
+                        Download CV<br>English - not done yet
+                    </a>
+                    <a 
+                        class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 me-3" 
+                        href="https://www.linkedin.com/in/francomanuelceballos/" 
+                        role="button"
+                    >
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" 
+                        alt="LinkedIn Logo" 
+                        style="width: 48px; height: 48px; margin-right: 5px;">
+                        LinkedIn
+                    </a>
+                    <a 
+                        class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 me-3" 
+                        href="https://github.com/francomceballos" 
+                        role="button"
+                    >
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" 
+                        alt="GitHub Logo" 
+                        style="width: 48px; height: 48px; margin-right: 5px;">
+                        GitHub
+                    </a>                  
                 </div>
             </div>
         </div>
