modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="51" class="bg-dark">
 
     
-<!-- Refactored Navbar Start -->
+<!-- Navbar Start -->
 <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
     <a class="navbar-brand ml-lg-3" href="index.html">
         <h1 class="m-0 display-5"><span class="text-primary">Franco</span>Ceballos</h1>
@@ -45,7 +45,7 @@
         <a class="btn btn-outline-primary d-none d-lg-block" href="https://www.linkedin.com/in/francomanuelceballos/">Contact me</a>
     </div>
 </nav>
-<!-- Refactored Navbar End -->
+<!-- Navbar End -->
 
 
 
