modified:   index.html

--- a/index.html
+++ b/index.html
@@ -167,10 +167,8 @@
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
+                  I specialize in creating modern, responsive websites tailored to your needs. Our team ensures that your web presence is visually appealing and functionally robust, 
+                  enhancing your online visibility and engagement.
               </div>
             </div>
           </div>
@@ -182,9 +180,8 @@
               <div class="service-content">
                 <h2 class="s-title">Testing</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  My comprehensive testing services guarantee that your application runs smoothly and efficiently. I employ a variety of testing methodologies to identify and fix bugs
+                  , ensuring optimal performance and user satisfaction.
                 </p>
               </div>
             </div>
