--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Franco Ceballos - Portfolio - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Full Stack Developer, Web Development, Freelance, Portfolio" name="keywords">
+  <meta content="Franco Ceballos - Full Stack Developer offering web development, testing services, and showcasing a comprehensive portfolio of projects." name="description">
+  
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -148,12 +149,8 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
-              <h3 class="title-a">
-                Services
-              </h3>
-              <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              </p>
+              <h3 class="title-a">Services</h3>
+              <p class="subtitle-a">Providing a range of high-quality services to meet your needs.</p>
               <div class="line-mf"></div>
             </div>
           </div>
@@ -167,8 +164,8 @@
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
                 <p class="s-description text-center">
-                  I specialize in creating modern, responsive websites tailored to your needs. Our team ensures that your web presence is visually appealing and functionally robust, 
-                  enhancing your online visibility and engagement.
+                  I specialize in creating modern, responsive websites tailored to your needs. I ensure that your web presence is visually appealing and functionally robust, enhancing your online visibility and engagement.
+                </p>
               </div>
             </div>
           </div>
@@ -180,15 +177,15 @@
               <div class="service-content">
                 <h2 class="s-title">Testing</h2>
                 <p class="s-description text-center">
-                  My comprehensive testing services guarantee that your application runs smoothly and efficiently. I employ a variety of testing methodologies to identify and fix bugs
-                  , ensuring optimal performance and user satisfaction.
+                  My comprehensive testing services ensure your application runs smoothly and efficiently. I employ a variety of testing methodologies to identify and fix bugs, ensuring optimal performance and user satisfaction.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </section>
+    
 
 
     <!-- ======= Portfolio Section ======= -->
