modified:   index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                       I have honed a diverse skill set in web development, covering both client-side and server-side programming. My expertise includes HTML, CSS, and JavaScript, and I have hands-on experience with leading technologies like React, Node.js, and SQL databases.
                     </p>
                     <p class="lead">
-                      Thank you for visiting my website! I look forward to connecting with you. Please feel free to reach out
+                      Thank you for visiting my website! I look forward to connecting with you. Please feel free to reach out.
                     </p>
                   </div>
                 </div>
