modified:   index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
                 <p class="s-description text-center">
-                  I specialize in creating modern, responsive websites tailored to your needs. I ensure that your web presence is visually appealing and functionally robust, enhancing your online visibility and engagement.
+                  I specialize in creating modern, responsive websites tailored to your needs. 
+                  I ensure that your web presence is visually appealing and functionally robust, 
+                  enhancing your online visibility and engagement.
                 </p>
               </div>
             </div>
@@ -177,7 +179,9 @@
               <div class="service-content">
                 <h2 class="s-title">Testing</h2>
                 <p class="s-description text-center">
-                  My comprehensive testing services ensure your application runs smoothly and efficiently. I employ a variety of testing methodologies to identify and fix bugs, ensuring optimal performance and user satisfaction.
+                  My comprehensive testing services ensure your application runs smoothly and efficiently. 
+                  I employ a variety of testing methodologies to identify and fix bugs, 
+                  ensuring optimal performance and user satisfaction.
                 </p>
               </div>
             </div>
