new file:   assets/curriculum-vitae/CV-Ceballos-Franco-2024-EN.pdf 	new file:   assets/curriculum-vitae/CV-Ceballos-Franco-2024-ES.pdf 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                       Thank you for visiting my website! I look forward to connecting with you. Please feel free to reach out.
                     </p>
                   </div>
+                  <button class="button button-transparent button-big button-rouded mt-5" href="/assets/curriculum-vitae/CV-Ceballos-Franco-2024-ES.pdf">Download CV Spanish</button>
+                  <button class="button button-transparent button-big button-rouded mt-5" href="/assets/curriculum-vitae/CV-Ceballos-Franco-2024-EN.pdf">Download CV English</button>
                 </div>
               </div>
             </div>
