modified:   index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,15 @@
           <p class="display-6 color-d">Hello, world!</p>
           <h1 class="hero-title mb-4">I am Franco Ceballos</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Full Stack Developer, Freelancer,"></span></p>
-           <p class="pt-3"><a class="btn btn-transparent btn js-scroll px-4" href="#about" role="button"><h3><i class="bi bi-arrow-down"></i>Learn More</a></h3></p>
+           <p class="pt-4">
+            <a class="btn btn-transparent btn js-scroll px-4" href="#about">
+              <i class="bi bi-arrow-down"></i> Learn More
+            </a>
+            <a class="btn btn-transparent" href="https://github.com/francomceballos">
+              <i class="bi bi-github"></i> GitHub
+            </a>
+          </p>
+           
         </div>
       </div>
     </div>
@@ -236,6 +244,7 @@
               </div>
             </div>
           </div>
+          <!--
           <div class="col-md-4">
             <div class="work-box rounded-4">
               <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -284,6 +293,7 @@
               </div>
             </div>
           </div>
+          -->
           <div class="col-md-4">
             
           </div>
@@ -308,8 +318,9 @@
             <div class="contact-info box-shadow-full rounded-4">
               <h2 class="title-c text-center mb-4">Get in Touch</h2>
               <div class="social-links">
-                <a class="btn button-transparent button-big" href="https://www.linkedin.com/in/francomanuelceballos/"><h3><i class="bi bi-linkedin"></i> LinkedIn </h3></a>
-                <a class="btn button-transparent button-big" href="mailto:francomanuelceballos@gmail.com"><h3><i class="bi bi-envelope-at-fill"></i> Email </h3></a>
+                <button class="btn button-transparent button-big" href="https://www.linkedin.com/in/francomanuelceballos/"><h3><i class="bi bi-linkedin"></i> LinkedIn </h3></button>
+                <button class="btn button-transparent button-big" href="https://github.com/francomceballos"><h3><i class="bi bi-github"></i> GitHub </h3"></button>
+                <button class="btn button-transparent button-big" href="mailto:francomanuelceballos@gmail.com"><h3><i class="bi bi-envelope-at-fill"></i> Email </h3></button>
               </div>
             </div>
           </div>
